--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,6 @@
-image: Visual Studio 2017
+image: Visual Studio 2019
 version: '{build}'
 build: off
 test: off
 build_script:
-  - cmd: msbuild /t:Rebuild /p:Configuration=Release /p:Platform=x86
-  - cmd: Release\PdbRpc23ErrorRepro.exe
+  - cmd: ci.bat
